pxc/tests/test_155_noncopyable/nc3.px
public namespace nc3 "use-unsafe";
public import core::common -;
public import core::pointer::raw -;
public function void nocopy_test_destr(int x)
{
}

{
  metafunction sn scoped_nullable{nocopy_test_destr};
  sn obj = sn(); // error: sn is not copyable
}

